--- a/README.org
+++ b/README.org
@@ -41,10 +41,11 @@ git checkout -b your_branch_name
 git branch
 git push --set-upstream origin your_branch_name
 #+END_SRC
-**** Reason :
-***** 1. Make the master branch clean
-***** 2. Push your code, and share how you accomplish these exercises, also learn from others 
-***** 3. Don't be shy to change the code in your own branch, the master branch should be just a template. Be Wild! If anything went wrong, the master branch is still there for you to reset!
+Reason:
+1. Make the master branch clean
+2. Learn how to use git
+3. Push your code, and share how you accomplish these exercises, also learn from others 
+4. Don't be shy to change the code in your own branch, the master branch should be just a template. Be Wild! If anything went wrong, the master branch is still there for you to reset!
 
 *** Read the comments 
 I have written down comments in the code, so please check them out.
