--- a/README.org
+++ b/README.org
@@ -24,7 +24,7 @@ wget https://bootstrap.pypa.io/pip/3.6/get-pip.py && python3 get-pip.py --user
 ~/.local/bin pip3 install --user numpy root_numpy h5py
 
   # I am not sure if CMSSW installs pyROOT in python3, at least for me it doesn't work for python3. 
-  * But python2.7 is sufficient for this code (maybe with some annoying warnings but who cares right)
+  # But python2.7 is sufficient for this code (maybe with some annoying warnings but who cares right)
   #+END_SRC
 
 * Data Convertion 
