--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@ make
 
  * *The pip install method works for me, but maybe not for other users. Should write a more general method here!!*
  * *Basically we will need numpy, root_numpy, h5py module for python code.*
- * *MAC users may run into h5py errors, try this https://gist.github.com/wtxdew/5f700b4c9c07cf95415cd35338230188. (Thanks to Shih-Ling)*
+ * *MAC users may run into h5py errors, try this https://gist.github.com/wtxdew/5f700b4c9c07cf95415cd35338230188. (Thanks to Ling Shih)*
   
 * Alternative: build in ntugrid5
   #+BEGIN_SRC sh
