--- a/README.org
+++ b/README.org
@@ -49,6 +49,17 @@ ls data/test.root > input.txt
   You will find the output root file in "root_plot" and output pdf plots in "plots". Open the root file with root TBrowser and check the plots inside. Before you start extending this code and begin to build your own analysis program, please check the tips below.
 
 * Tips
+*** ROOT is mandatory here!
+There are many resources to help you get familiar with ROOT. I will list some
+here but there are just tons of them out there so find what fits you the best.
+Try to use what you learn from these tutorials in the alibava exercises, you
+definitely don't need to be an expert before you can start doing some
+interesting research!
+**** [[https://root.cern/manual/basics/][ROOT manual]]
+**** [[https://root.cern.ch/root/htmldoc/guides/primer/ROOTPrimer.html][A ROOT Guide For Beginners]]
+**** [[https://root.cern/tutorials/][ROOT Tutorials ( example code )]]
+**** [[https://hep1.phys.ntu.edu.tw/~kfjack/lecture/hepcomp/2016/][Course from Jack]]
+
 *** Get familiar with Git.
     I would recommend after you clone this code to local, checkout to your own branch and build your own code there. If you haven't have a github account, I would suggest you to create one first on https://github.com
     #+BEGIN_SRC sh
